CHORE: addressed issues where the child data could be nothing and therefore break the visualiser

--- a/src/ui/styles/WorkspaceContainer.module.css
+++ b/src/ui/styles/WorkspaceContainer.module.css
@@ -6,7 +6,7 @@
 }
 
 .workspaceTabBar {
-	min-height: 1em;
+	min-height: 1.5em;
 	flex-flow: column;
 	width: 100%;
 	border-bottom: 1px #35332f solid;
